--- a/templets/media.html
+++ b/templets/media.html
@@ -2,120 +2,367 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data-Details</title>
+  <meta charset="UTF-8">
+  <title>Audit-Manager Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    .sidebar {
+      height: 100vh;
+      background-color: #1f2937;
+      color: white;
+      padding-top: 20px;
+      position: fixed;
+      width: 250px;
+      transition: all 0.3s;
+      z-index: 1050;
+    }
+
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 12px 20px;
+      font-size: 16px;
+    }
+
+    .sidebar a:hover {
+      background-color: #374151;
+      border-radius: 5px;
+    }
+
+    .main-content {
+      margin-left: 250px;
+      padding: 20px;
+      transition: all 0.3s;
+    }
+
+    /* Hide sidebar and shift content for small screens */
+    @media (max-width: 768px) {
+      .sidebar {
+        left: -250px;
+      }
+
+      .sidebar.active {
+        left: 0;
+      }
+
+      .main-content {
+        margin-left: 0;
+      }
+
+      .overlay {
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        top: 0;
+        left: 0;
+        z-index: 1040;
+      }
+
+      .overlay.active {
+        display: block;
+      }
+    }
+  </style>
 </head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
 
-<body style="padding-top: 200px;">
-    <div class="fixed-top navbar-light bg-light container">
+<body>
+
+  <!-- Toggle Button (hamburger) -->
+  <nav class="navbar bg-dark d-md-none">
+    <div class="container-fluid">
+      <button class="btn btn-outline-light" id="menu-toggle">☰</button>
+      <span class="navbar-brand mb-0 h1 text-white">Audit-Manager</span>
+    </div>
+  </nav>
+
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <h4 class="text-start">Audit-Manager</h4>
+    <h5>Welcome {{request.user}}</h5>
+    <hr style="border-color: rgba(255, 255, 255, 0.2)">
+    <a href="/">🏠 Home</a>
+    <a href="/scanner">📷 Scanning-File</a>
+    <a href="/scan">📷 Scanning-Record</a>
+    <a href="/scan">📷 Scanning-Record_Excess</a>
+    <a href="/scan">📷 Scanning-Record-Nill</a>
 
 
-        <h2 class="mb-4">Imported Data Table</h2>
-        <table class="table table-bordered table-hover">
-            <thead class="table-dark">
-                <tr>
-                    <th>Location</th>
-                    <th>Item Code</th>
-                    <th>Item Name</th>
-                    <th>Show Detials</th>
 
-                </tr>
+  </div>
+
+  <!-- Main Content -->
+  <div class="main-content">
+    <div class="container">
+      <h2 class="mb-4">Upload-Scanning Excel File</h2>
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="excel_file" class="form-label">Select-Scanning Excel File</label>
+          <input class="form-control" type="file" id="excel_file" name="file" accept=".xls,.xlsx,.csv" required>
+        </div>
+        <button class="btn btn-primary" type="submit">Import</button>
+      </form>
+    </div><br>
+
+    {% if messages %}
+    <div class="container mt-2">
+      {% for message in messages %}
+      <div class="alert
+               {% if message.tags == 'success' %} alert-success
+               {% elif message.tags == 'error' %} alert-danger
+               {% else %} alert-info {% endif %}
+               alert-dismissible fade show" role="alert">
+
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
+    <!-- Update Barcode Form -->
+    <!--<div class="flex-fill" style="min-width: 300px; max-width: 100%;">-->
+    <!--    <h5 class="card-title">Update Barcode</h5>-->
+    <!--    <div class="card shadow p-3 h-100">-->
+    <!--        <form action="/dataEnter" method="post">-->
+    <!--            {% csrf_token %}-->
+    <!--            <div class="d-flex flex-wrap gap-3" style="display: flex; flex-direction: row;">-->
+    <!--                <div class="mb-3">-->
+    <!--                <label for="cb" class="form-label">Enter a locationNo:</label>-->
+    <!--                <input type="text" name="cb" id="bc" class="form-control"-->
+    <!--                    placeholder="Location number ...">-->
+    <!--            </div>-->
+    <!--            <div class="mb-3">-->
+    <!--                <label for="cb" class="form-label">Enter a Addl:</label>-->
+    <!--                <input type="text" name="cb" id="bc" class="form-control"-->
+    <!--                    placeholder="Addl ...">-->
+    <!--            </div>-->
+    <!--            <div class="mb-3">-->
+    <!--                <label for="ub" class="form-label">Enter Update Addl:</label>-->
+    <!--                <input type="text" name="ub" id="ub" class="form-control"-->
+    <!--                    placeholder="Update Addl ...">-->
+    <!--            </div>-->
+    <!--            <div class="mb-3">-->
+    <!--            <button type="submit" class="btn btn-success w-100">Update</button>-->
+    <!--            </div>-->
+    <!--            </div>-->
+    <!--        </form>-->
+    <!--    </div>-->
+    <!--</div><br>-->
+    <!-- Django Messages -->
+
+
+    <div class="container">
+      <h2 class="mb-4 row justify-content-center">Scanning Excel File</h2>
+
+      <div class="container py-4">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card shadow-sm p-3">
+              <h5 class="mb-3">Select Status</h5>
+
+              <form action="" method="get">
+                {% csrf_token %}
+                <div class="mb-3">
+                  <label for="status" class="form-label">Choose Status:</label>
+                  <select id="status" name="status" class="form-select">
+                    <option value="Scanning">Scanning-Sheet</option>
+                    <option value="Excess">Excess-Sheet</option>
+                    <option value="Nill">Nill-Sheet</option>
+                  </select>
+                </div>
+
+                <button type="submit" class="btn btn-primary w-100" onclick="ls()">Apply</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<br>
+
+     <div class="container-fluid mt-4">
+
+  <!-- Page Title -->
+  <h2 class="mb-4 text-center text-primary fw-bold">
+    📊 Scanning Records
+  </h2>
+
+  <!-- Card Wrapper -->
+  <div class="card shadow-lg border-0 rounded-3">
+    <div class="card-body">
+
+      <!-- Scrollable Table -->
+      <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+        <form method="post" action="/dataEnter">
+          {% csrf_token %}
+          <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
+            <thead class="table-dark sticky-top">
+              <tr>
+                <th scope="col">
+                  <input type="checkbox" id="selectAll" class="form-check-input">
+                </th>
+                <th scope="col">#</th>
+                <th scope="col">Location</th>
+                <th scope="col">ADDL</th>
+                <th scope="col">Item Code</th>
+                <th scope="col">Item Name</th>
+                <th scope="col">Size</th>
+                <th scope="col">MRP</th>
+                <th scope="col">Brand</th>
+                <th scope="col">Section</th>
+                <th scope="col">Season</th>
+                <th scope="col">Colours</th>
+                <th scope="col">Action</th>
+              </tr>
             </thead>
             <tbody>
-                <form method="post" action="/media">
-                    {% csrf_token %}
-                    <tr>
-                        <td>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="location" name="location">
-                            </div>
-                        </td>
-                        <td>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="item_code" name="item_code">
-                            </div>
-                        </td>
-                        <td>
-                            <div class="mb-3">
-                                <input type="text" class="form-control" id="item_name" name="item_name">
-                            </div>
-                        </td>
-                        <td>
-                            <div class="mb-10">
-                                <button type="submit" class="btn btn-primary">Show</button>
-                            </div>
-                        </td>
-                    </tr>
-                </form>
+              {% for row in display %}
+              <tr>
+                <td>
+                  <input type="checkbox" name="selected_items" value="{{ row.id }}" class="form-check-input">
+                </td>
+                <td>{{ row.id }}</td>
+                <td>{{ row.loc_rec }}</td>
+                <td>{{ row.add_item_list }}</td>
+                <td>{{ row.ITEMCODE }}</td>
+                <td>{{ row.ITEMNAME }}</td>
+                <td>{{ row.SIZE }}</td>
+                <td>{{ row.MRP }}</td>
+                <td>{{ row.BRANDNAME }}</td>
+                <td>{{ row.SECTION }}</td>
+                <td>{{ row.SEASON }}</td>
+                <td>{{ row.COLOURS }}</td>
+                <td>
+                  <button type="submit" name="delete_id" value="{{ row.id }}"
+                          class="btn btn-sm btn-danger">
+                    <i class="bi bi-trash"></i> Delete
+                  </button>
+                </td>
+              </tr>
+              {% empty %}
+              <tr>
+                <td colspan="13" class="text-center text-muted">No records found</td>
+              </tr>
+              {% endfor %}
             </tbody>
-        </table>
+          </table>
+<div class="container-fluid mt-4">
+  <!-- Page Title -->
+  <h2 class="mb-4 text-center text-primary fw-bold">
+    📊 Scanning Records
+  </h2>
 
-    </div>
-    <div class="container mt-4">
-        <h4>Scrollable Table</h4>
+  <!-- Card Wrapper -->
+  <div class="card shadow-lg border-0 rounded-3">
+    <div class="card-body">
 
-        <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
-            <table class="table table-striped table-bordered" style=" margin-top: 15px;">
-                <thead class="table-dark " style=" position: sticky; top: 0; background: white; z-index: 2; ">
-                    <tr>
-                        <th id="location">Location</th>
-                        <th id="addl">Addl</th>
-                        <th id="item_code">Item Code</th>
-                        <th id="item_name">Item Name</th>
-                        <th id="size">Size</th>
-                        <th id="Qty">Qty</th>
-                    </tr>
-                </thead>
-                <tbody style="margin-top: 100px;">
-                <div class="container my-1">
-                        <div class="row g-4">
-                            {% for item in data %}
+      <!-- Scrollable Table -->
+      <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+        <form method="post" action="/dataEnter">
+          {% csrf_token %}
+          <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
+            <thead class="table-dark sticky-top">
+              <tr>
+                <th scope="col">
+                  <input type="checkbox" id="selectAll" class="form-check-input">
+                </th>
+                <th scope="col">#</th>
+                <th scope="col">Location</th>
+                <th scope="col">ADDL</th>
+                <th scope="col">Item Code</th>
+                <th scope="col">Item Name</th>
+                <th scope="col">Size</th>
+                <th scope="col">MRP</th>
+                <th scope="col">Brand</th>
+                <th scope="col">Section</th>
+                <th scope="col">Season</th>
+                <th scope="col">Colours</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for row in display1 %}
+              <tr>
+                <td>
+                  <input type="checkbox" name="selected_items" value="{{ row.id }}" class="form-check-input">
+                </td>
+                <td>{{ row.id }}</td>
+                <td>{{ row.loc_rec }}</td>
+                <td>{{ row.add_item_list }}</td>
+                <td>{{ row.ITEMCODE }}</td>
+                <td>{{ row.ITEMNAME }}</td>
+                <td>{{ row.SIZE }}</td>
+                <td>{{ row.MRP }}</td>
+                <td>{{ row.BRANDNAME }}</td>
+                <td>{{ row.SECTION }}</td>
+                <td>{{ row.SEASON }}</td>
+                <td>{{ row.COLOURS }}</td>
+                <td>
+                  <button type="submit" name="delete_id" value="{{ row.id }}"
+                          class="btn btn-sm btn-danger">
+                    <i class="bi bi-trash"></i> Delete
+                  </button>
+                </td>
+              </tr>
+              {% empty %}
+              <tr>
+                <td colspan="13" class="text-center text-muted">No records found</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
 
-                            <div class="col-md-4 col-sm-6">
 
-                                <form method="post">
-                                    {% csrf_token %}
-                                    <a href="/" style="text-decoration: none;"></a>
-                                    <div class="card p-3 shadow-sm">
-                                        <div class="card-body">
-                                            <h3 class="card-title" name="location">Item Code: {{ item.location }}</h3>
-                                            <h5 class="card-title" name="item_code">Item Code: {{ item.addl }}</h5>
-                                            <p class="card-text" name="item_name"><strong>Name:</strong> {{
-                                                item.itemname }}</p>
-                                            <p class="card-text"><strong>Size:</strong> {{ item.size }}</p>
-                                            <p class="card-text"><strong>Qty:</strong> {{ item.qty }}</p>
-                                            <button style="display: none;"></button>
-                                        </div>
-                                    </div>
-                                    </a>
-                                </form>
+        <br>
+  
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+      <script>
+        const sidebar = document.getElementById("sidebar");
+        const overlay = document.getElementById("overlay");
+        const toggle = document.getElementById("menu-toggle");
 
-                            </div>
+        toggle.addEventListener("click", () => {
+          sidebar.classList.toggle("active");
+          overlay.classList.toggle("active");
+        });
 
-                            {% empty %}
+        overlay.addEventListener("click", () => {
+          sidebar.classList.remove("active");
+          overlay.classList.remove("active");
+        });
 
-                            {% endfor %}
-                            {% for row in location %}
-                            <tr style="margin-top: 50%;">
-                                <td>{{ row.location }}</td>
-                                <td>{{ row.addl }}</td>
-                                <td>{{ row.itemcode }}</td>
-                                <td>{{ row.itemname }}</td>
-                                <td>{{ row.size }}</td>
-                                <td>{{ row.qty }}</td>
-                            </tr>
-                            {% endfor %}
+        <!-- ✅ Script for Select All -->
 
-                </tbody>
-            </table>
-        </div>
-    </div>
+        document.getElementById("selectAll").addEventListener("click", function () {
+          let checkboxes = document.querySelectorAll('input[name="selected_items"]');
+          checkboxes.forEach(cb => cb.checked = this.checked);
+        });
+
+        document.getElementById("selectAll").addEventListener("click", function () {
+          let checkboxes = document.querySelectorAll('input[name="selected_itemsE"]');
+          checkboxes.forEach(cb => cb.checked = this.checked);
+        });
+
+        document.getElementById("selectAll").addEventListener("click", function () {
+          let checkboxes = document.querySelectorAll('input[name="selected_itemsN"]');
+          checkboxes.forEach(cb => cb.checked = this.checked);
+        });
+
+      </script>
+
+</body>
+
+</html>
+
 
 
 </body>
