--- a/templets/importScanningFIle.html
+++ b/templets/importScanningFIle.html
@@ -89,7 +89,7 @@
     <h5>Welcome {{request.user}}</h5>
     <hr style="border-color: rgba(255, 255, 255, 0.2)">
     <a href="/">🏠 Home</a>
-    <a href="/scanner">📷 Scanning-File</a>
+    <a href="/dataEnter">📷 Scanning-File</a>
     <a href="/scan">📷 Scanning-Record</a>
 
 
