--- a/templets/shortFile.html
+++ b/templets/shortFile.html
@@ -94,7 +94,7 @@
     <a href="/">🏠 Home</a>
     <a href="/master">📁 Master-File</a>
     <a href="/upload/">📦 Stock-File</a>
-    <a href="/scanner">📷 Scanning-File</a>
+    <a href="/dataEnter">📷 Scanning-File</a>
     <a href="/ss">🔄 Difference (Stock & Scan)</a>
     <a href="/short">📉 Short-File</a>
     <a href="/excess">📈 Excess-File</a>
