--- a/templets/upload.html
+++ b/templets/upload.html
@@ -112,7 +112,7 @@
     <a href="/upload/">📦 Stock-File</a>
     <a href="/stockdata">📦 Stock-Record</a>
     <a href="/masterdata">📈 Master-Record</a>
-    <a href="/scanner">📷 Scanning-File</a>
+    <a href="/dataEnter">📷 Scanning-File</a>
     <a href="/scand">📷Download-Scanning-File</a>
     <a href="/ss">🔄 Difference (Stock & Scan)</a>
     <a href="/logout">🔓 Logout</a>
