--- a/templets/DBS&S.html
+++ b/templets/DBS&S.html
@@ -115,7 +115,7 @@
     <a href="/upload/">📦 Stock-File</a>
     <a href="/stockdata">📦 Stock-Record</a>
     <a href="/masterdata">📈 Master-Record</a>
-    <a href="/scanner">📷 Scanning-File</a>
+    <a href="/dataEnter">📷 Scanning-File</a>
     <a href="/ss">🔄 Difference (Stock & Scan)</a>
     <a href="/logout">🔓 Logout</a>
   </div>
