--- a/templets/importScanningFIle.html
+++ b/templets/importScanningFIle.html
@@ -250,7 +250,12 @@
               </tr>
               {% endfor %}
             </tbody>
-          </table><br>
+          </table>
+        </div>
+        </div>
+        </div>
+
+          <br>
 <div class="container-fluid mt-4" id="Excess" style="display: none;">
   <!-- Page Title -->
   <h2 class="mb-4 text-center text-primary fw-bold">
@@ -316,6 +321,11 @@
               {% endfor %}
             </tbody>
           </table>
+        </div>
+        </div>
+        </div>
+        </div>
+
 <br>
 
 <div class="container-fluid mt-4" id="Nill" style="display: none;">
@@ -383,8 +393,10 @@
               {% endfor %}
             </tbody>
           </table>
-
-
+        </div>
+        </div>
+        </div>
+        </div>
         <br>
   
       </div>
