--- a/templets/importScanningFIle.html
+++ b/templets/importScanningFIle.html
@@ -156,247 +156,219 @@
     <!-- Django Messages -->
 
 
-    <div class="container">
-      <h2 class="mb-4 row justify-content-center">Scanning Excel File</h2>
+   <div class="container">
+  <h2 class="mb-4 row justify-content-center">Scanning Excel File</h2>
 
-      <div class="container py-4">
-        <div class="row justify-content-center">
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card shadow-sm p-3">
-              <h5 class="mb-3">Select Status</h5>
+  <div class="container py-4">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card shadow-sm p-3">
+          <h5 class="mb-3">Select Status</h5>
 
-              <form action="" method="get">
-                {% csrf_token %}
-                <div class="mb-3">
-                  <label for="status" class="form-label">Choose Status:</label>
-                  <select id="status" name="status" class="form-select">
-                    <option value="Scanning">Scanning-Sheet</option>
-                    <option value="Excess">Excess-Sheet</option>
-                    <option value="Nill">Nill-Sheet</option>
-                  </select>
-                </div>
-
-                <button type="submit" class="btn btn-primary w-100" onclick="st() ">Apply</button>
-              </form>
+          <form action="" method="get" onsubmit="st(event)">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="status" class="form-label">Choose Status:</label>
+              <select id="status" name="status" class="form-select">
+                <option value="Scanning">Scanning-Sheet</option>
+                <option value="Excess">Excess-Sheet</option>
+                <option value="Nill">Nill-Sheet</option>
+              </select>
             </div>
-          </div>
+
+            <button type="submit" class="btn btn-primary w-100" onclick="st(event)">Apply</button>
+          </form>
         </div>
       </div>
+    </div>
+  </div>
 
-<br>
+  <br>
 
-     <div class="container-fluid mt-4" id="Scanning" style="display: none;">
+  <!-- Scanning Table -->
+  <div class="container-fluid mt-4" id="Scanning" style="display: none;">
+    <h2 class="mb-4 text-center text-primary fw-bold">📊 Scanning Records</h2>
+    <div class="card shadow-lg border-0 rounded-3">
+      <div class="card-body">
+        <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+          <form method="get" action="/scan/">
+            {% csrf_token %}
+            <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
+              <thead class="table-dark sticky-top">
+                <tr>
+                  <th><input type="checkbox" id="selectAll" class="form-check-input"></th>
+                  <th>#</th>
+                  <th>Location</th>
+                  <th>ADDL</th>
+                  <th>Item Code</th>
+                  <th>Item Name</th>
+                  <th>Size</th>
+                  <th>MRP</th>
+                  <th>Brand</th>
+                  <th>Section</th>
+                  <th>Season</th>
+                  <th>Colours</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for row in display %}
+                <tr>
+                  <td><input type="checkbox" name="selected_items" value="{{ row.id }}" class="form-check-input"></td>
+                  <td>{{ row.id }}</td>
+                  <td>{{ row.loc_rec }}</td>
+                  <td>{{ row.add_item_list }}</td>
+                  <td>{{ row.ITEMCODE }}</td>
+                  <td>{{ row.ITEMNAME }}</td>
+                  <td>{{ row.SIZE }}</td>
+                  <td>{{ row.MRP }}</td>
+                  <td>{{ row.BRANDNAME }}</td>
+                  <td>{{ row.SECTION }}</td>
+                  <td>{{ row.SEASON }}</td>
+                  <td>{{ row.COLOURS }}</td>
+                  <td>
+                    <button type="submit" name="delete_id" value="{{ row.id }}" class="btn btn-sm btn-danger">
+                      <i class="bi bi-trash"></i> Delete
+                    </button>
+                  </td>
+                </tr>
+                {% empty %}
+                <tr>
+                  <td colspan="13" class="text-center text-muted">No records found</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <!-- Page Title -->
-  <h2 class="mb-4 text-center text-primary fw-bold">
-    📊 Scanning Records
-  </h2>
 
-  <!-- Card Wrapper -->
-  <div class="card shadow-lg border-0 rounded-3">
-    <div class="card-body">
+  <!-- Excess Table -->
+  <div class="container-fluid mt-4" id="Excess" style="display: none;">
+    <h2 class="mb-4 text-center text-primary fw-bold">📊 Excess Records</h2>
+    <div class="card shadow-lg border-0 rounded-3">
+      <div class="card-body">
+        <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+          <form method="post" action="/dataEnter">
+            {% csrf_token %}
+            <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
+              <thead class="table-dark sticky-top">
+                <tr>
+                  <th><input type="checkbox" id="selectAll" class="form-check-input"></th>
+                  <th>#</th>
+                  <th>Location</th>
+                  <th>ADDL</th>
+                  <th>Item Code</th>
+                  <th>Item Name</th>
+                  <th>Size</th>
+                  <th>MRP</th>
+                  <th>Brand</th>
+                  <th>Section</th>
+                  <th>Season</th>
+                  <th>Colours</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for row in display %}
+                <tr>
+                  <td><input type="checkbox" name="selected_itemsE" value="{{ row.id }}" class="form-check-input"></td>
+                  <td>{{ row.id }}</td>
+                  <td>{{ row.loc_rec }}</td>
+                  <td>{{ row.add_item_list }}</td>
+                  <td>{{ row.ITEMCODE }}</td>
+                  <td>{{ row.ITEMNAME }}</td>
+                  <td>{{ row.SIZE }}</td>
+                  <td>{{ row.MRP }}</td>
+                  <td>{{ row.BRANDNAME }}</td>
+                  <td>{{ row.SECTION }}</td>
+                  <td>{{ row.SEASON }}</td>
+                  <td>{{ row.COLOURS }}</td>
+                  <td>
+                    <button type="submit" name="delete_id" value="{{ row.id }}" class="btn btn-sm btn-danger">
+                      <i class="bi bi-trash"></i> Delete
+                    </button>
+                  </td>
+                </tr>
+                {% empty %}
+                <tr>
+                  <td colspan="13" class="text-center text-muted">No records found</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
-      <!-- Scrollable Table -->
-      <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-        <form method="get" action="/scan/">
-          {% csrf_token %}
-          <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
-            <thead class="table-dark sticky-top">
-              <tr>
-                <th scope="col">
-                  <input type="checkbox" id="selectAll" class="form-check-input">
-                </th>
-                <th scope="col">#</th>
-                <th scope="col">Location</th>
-                <th scope="col">ADDL</th>
-                <th scope="col">Item Code</th>
-                <th scope="col">Item Name</th>
-                <th scope="col">Size</th>
-                <th scope="col">MRP</th>
-                <th scope="col">Brand</th>
-                <th scope="col">Section</th>
-                <th scope="col">Season</th>
-                <th scope="col">Colours</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for row in display %}
-              <tr>
-                <td>
-                  <input type="checkbox" name="selected_items" value="{{ row.id }}" class="form-check-input">
-                </td>
-                <td>{{ row.id }}</td>
-                <td>{{ row.loc_rec }}</td>
-                <td>{{ row.add_item_list }}</td>
-                <td>{{ row.ITEMCODE }}</td>
-                <td>{{ row.ITEMNAME }}</td>
-                <td>{{ row.SIZE }}</td>
-                <td>{{ row.MRP }}</td>
-                <td>{{ row.BRANDNAME }}</td>
-                <td>{{ row.SECTION }}</td>
-                <td>{{ row.SEASON }}</td>
-                <td>{{ row.COLOURS }}</td>
-                <td>
-                  <button type="submit" name="delete_id" value="{{ row.id }}"
-                          class="btn btn-sm btn-danger">
-                    <i class="bi bi-trash"></i> Delete
-                  </button>
-                </td>
-              </tr>
-              {% empty %}
-              <tr>
-                <td colspan="13" class="text-center text-muted">No records found</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-        </div>
-        </div>
 
-          <br>
-<div class="container-fluid mt-4" id="Excess" style="display: none;">
-  <!-- Page Title -->
-  <h2 class="mb-4 text-center text-primary fw-bold">
-    📊 Excess Records
-  </h2>
+  <!-- Nill Table -->
+  <div class="container-fluid mt-4" id="Nill" style="display: none;">
+    <h2 class="mb-4 text-center text-primary fw-bold">📊 Nill Records</h2>
+    <div class="card shadow-lg border-0 rounded-3">
+      <div class="card-body">
+        <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+          <form method="post" action="/dataEnter">
+            {% csrf_token %}
+            <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
+              <thead class="table-dark sticky-top">
+                <tr>
+                  <th><input type="checkbox" id="selectAll" class="form-check-input"></th>
+                  <th>#</th>
+                  <th>Location</th>
+                  <th>ADDL</th>
+                  <th>Item Code</th>
+                  <th>Item Name</th>
+                  <th>Size</th>
+                  <th>MRP</th>
+                  <th>Brand</th>
+                  <th>Section</th>
+                  <th>Season</th>
+                  <th>Colours</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for row in display %}
+                <tr>
+                  <td><input type="checkbox" name="selected_itemsN" value="{{ row.id }}" class="form-check-input"></td>
+                  <td>{{ row.id }}</td>
+                  <td>{{ row.loc_rec }}</td>
+                  <td>{{ row.add_item_list }}</td>
+                  <td>{{ row.ITEMCODE }}</td>
+                  <td>{{ row.ITEMNAME }}</td>
+                  <td>{{ row.SIZE }}</td>
+                  <td>{{ row.MRP }}</td>
+                  <td>{{ row.BRANDNAME }}</td>
+                  <td>{{ row.SECTION }}</td>
+                  <td>{{ row.SEASON }}</td>
+                  <td>{{ row.COLOURS }}</td>
+                  <td>
+                    <button type="submit" name="delete_id" value="{{ row.id }}" class="btn btn-sm btn-danger">
+                      <i class="bi bi-trash"></i> Delete
+                    </button>
+                  </td>
+                </tr>
+                {% empty %}
+                <tr>
+                  <td colspan="13" class="text-center text-muted">No records found</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <!-- Card Wrapper -->
-  <div class="card shadow-lg border-0 rounded-3">
-    <div class="card-body">
 
-      <!-- Scrollable Table -->
-      <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-        <form method="post" action="/dataEnter">
-          {% csrf_token %}
-          <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
-            <thead class="table-dark sticky-top">
-              <tr>
-                <th scope="col">
-                  <input type="checkbox" id="selectAll" class="form-check-input">
-                </th>
-                <th scope="col">#</th>
-                <th scope="col">Location</th>
-                <th scope="col">ADDL</th>
-                <th scope="col">Item Code</th>
-                <th scope="col">Item Name</th>
-                <th scope="col">Size</th>
-                <th scope="col">MRP</th>
-                <th scope="col">Brand</th>
-                <th scope="col">Section</th>
-                <th scope="col">Season</th>
-                <th scope="col">Colours</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for row in display1 %}
-              <tr>
-                <td>
-                  <input type="checkbox" name="selected_itemsE" value="{{ row.id }}" class="form-check-input">
-                </td>
-                <td>{{ row.id }}</td>
-                <td>{{ row.loc_rec }}</td>
-                <td>{{ row.add_item_list }}</td>
-                <td>{{ row.ITEMCODE }}</td>
-                <td>{{ row.ITEMNAME }}</td>
-                <td>{{ row.SIZE }}</td>
-                <td>{{ row.MRP }}</td>
-                <td>{{ row.BRANDNAME }}</td>
-                <td>{{ row.SECTION }}</td>
-                <td>{{ row.SEASON }}</td>
-                <td>{{ row.COLOURS }}</td>
-                <td>
-                  <button type="submit" name="delete_id" value="{{ row.id }}"
-                          class="btn btn-sm btn-danger">
-                    <i class="bi bi-trash"></i> Delete
-                  </button>
-                </td>
-              </tr>
-              {% empty %}
-              <tr>
-                <td colspan="13" class="text-center text-muted">No records found</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-        </div>
-        </div>
-        </div>
-<br>
-
-<div class="container-fluid mt-4" id="Nill" style="display: none;">
-  <!-- Page Title -->
-  <h2 class="mb-4 text-center text-primary fw-bold">
-    📊 Nill Records
-  </h2>
-
-  <!-- Card Wrapper -->
-  <div class="card shadow-lg border-0 rounded-3">
-    <div class="card-body">
-
-      <!-- Scrollable Table -->
-      <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-        <form method="post" action="/dataEnter">
-          {% csrf_token %}
-          <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
-            <thead class="table-dark sticky-top">
-              <tr>
-                <th scope="col">
-                  <input type="checkbox" id="selectAll" class="form-check-input">
-                </th>
-                <th scope="col">#</th>
-                <th scope="col">Location</th>
-                <th scope="col">ADDL</th>
-                <th scope="col">Item Code</th>
-                <th scope="col">Item Name</th>
-                <th scope="col">Size</th>
-                <th scope="col">MRP</th>
-                <th scope="col">Brand</th>
-                <th scope="col">Section</th>
-                <th scope="col">Season</th>
-                <th scope="col">Colours</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for row in display1 %}
-              <tr>
-                <td>
-                  <input type="checkbox" name="selected_itemsN" value="{{ row.id }}" class="form-check-input">
-                </td>
-                <td>{{ row.id }}</td>
-                <td>{{ row.loc_rec }}</td>
-                <td>{{ row.add_item_list }}</td>
-                <td>{{ row.ITEMCODE }}</td>
-                <td>{{ row.ITEMNAME }}</td>
-                <td>{{ row.SIZE }}</td>
-                <td>{{ row.MRP }}</td>
-                <td>{{ row.BRANDNAME }}</td>
-                <td>{{ row.SECTION }}</td>
-                <td>{{ row.SEASON }}</td>
-                <td>{{ row.COLOURS }}</td>
-                <td>
-                  <button type="submit" name="delete_id" value="{{ row.id }}"
-                          class="btn btn-sm btn-danger">
-                    <i class="bi bi-trash"></i> Delete
-                  </button>
-                </td>
-              </tr>
-              {% empty %}
-              <tr>
-                <td colspan="13" class="text-center text-muted">No records found</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-        </div>
-        </div>
-        </div>
-        <br>
   
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -432,24 +404,26 @@
           checkboxes.forEach(cb => cb.checked = this.checked);
         });
 
-Status = document.getElementById('status').value();
-// Get the selected value
-let selectedStatus = document.getElementById("status").value;
-// Get all divs
-let SCR = document.getElementById("Scanning");
-let ER = document.getElementById("Excess");
-let NR = document.getElementById("Nill");
-// console.log("Status :",Status)
+function st(event) {
+    if (event) event.preventDefault();
 
-  function st() {  
-    // Show based on selection
-    if (selectedStatus === 'Scanning') {
+    let selectedStatus = document.getElementById("status").value;
+
+    let SCR = document.getElementById("Scanning");
+    let ER  = document.getElementById("Excess");
+    let NR  = document.getElementById("Nill");
+
+    // hide all
+    SCR.style.display = "none";
+    ER.style.display  = "none";
+    NR.style.display  = "none";
+
+    // show only selected
+    if (selectedStatus === "Scanning") {
       SCR.style.display = "block";
-      ER.style.display = "none";
-      NR.style.display = "none";
-    } else if (selectedStatus === 'Excess') {
+    } else if (selectedStatus === "Excess") {
       ER.style.display = "block";
-    } else if (selectedStatus === 'Nill') {
+    } else if (selectedStatus === "Nill") {
       NR.style.display = "block";
     }
   }
