--- a/templets/importScanningFIle.html
+++ b/templets/importScanningFIle.html
@@ -252,7 +252,7 @@
     <div class="card shadow-lg border-0 rounded-3">
       <div class="card-body">
         <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-          <form method="post" action="/dataEnter">
+          <form method="get" action="/scan/">
             {% csrf_token %}
             <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
               <thead class="table-dark sticky-top">
@@ -273,7 +273,7 @@
                 </tr>
               </thead>
               <tbody>
-                {% for row in display %}
+                {% for row in display1 %}
                 <tr>
                   <td><input type="checkbox" name="selected_itemsE" value="{{ row.id }}" class="form-check-input"></td>
                   <td>{{ row.id }}</td>
@@ -313,7 +313,7 @@
     <div class="card shadow-lg border-0 rounded-3">
       <div class="card-body">
         <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-          <form method="post" action="/dataEnter">
+          <form method="get" action="/scan/">
             {% csrf_token %}
             <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
               <thead class="table-dark sticky-top">
@@ -334,7 +334,7 @@
                 </tr>
               </thead>
               <tbody>
-                {% for row in display %}
+                {% for row in display2 %}
                 <tr>
                   <td><input type="checkbox" name="selected_itemsN" value="{{ row.id }}" class="form-check-input"></td>
                   <td>{{ row.id }}</td>
