--- a/templets/Data_Entry.html
+++ b/templets/Data_Entry.html
@@ -270,7 +270,7 @@
                     {% endif %}
 
                     <!-- Action Toggle Tabs -->
-<!--<ul class="nav nav-tabs mb-3" id="barcodeTab" role="tablist">-->
+<!-- <ul class="nav nav-tabs mb-3" id="barcodeTab" role="tablist">-->
 <!--  <li class="nav-item" role="presentation">-->
 <!--    <button class="nav-link active" id="update-tab" data-bs-toggle="tab" data-bs-target="#update-form" type="button" role="tab">Update</button>-->
 <!--  </li>-->
@@ -304,26 +304,23 @@
 <!--    </div>-->
 <!--  </div>-->
 
-  <!-- Delete Form -->
-<!--  <div class="tab-pane fade" id="delete-form" role="tabpanel">-->
-<!--    <div class="card shadow p-3">-->
-<!--      <h5 class="card-title">Delete Barcode</h5>-->
-<!--      <form action="/deleteBarcode" method="post">-->
-<!--        {% csrf_token %}-->
-<!--        <div class="mb-3">-->
-<!--          <label for="locationNoDelete" class="form-label">Enter a Location No:</label>-->
-<!--          <input type="text" name="locationNo" id="locationNoDelete" class="form-control" required>-->
-<!--        </div>-->
-<!--        <div class="mb-3">-->
-<!--          <label for="addlDelete" class="form-label">Enter Addl:</label>-->
-<!--          <input type="text" name="addl" id="addlDelete" class="form-control" required>-->
-<!--        </div>-->
-<!--        <button type="submit" class="btn btn-danger w-100">Delete</button>-->
-<!--      </form>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<br>-->
+  
+<!--</div> -->
+<!--<br> -->
+<!--Delete Form -->
+  <div class="tab-pane fade show active" id="delete-form" role="tabpanel">
+    <div class="card shadow p-3">
+      <h5 class="card-title">Delete Barcode</h5>
+      <form action="" method="get">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="locationNoDelete" class="form-label">Enter a Location No:</label>
+          <input type="text" name="locationNo" id="locationNoDelete" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-danger w-100">Delete</button>
+      </form>
+    </div>
+</div> <br>
 
                 </div>
                 <!-- Filter + Update Barcode in Same Row with Flex -->
