--- a/templets/Data_Entry.html
+++ b/templets/Data_Entry.html
@@ -291,7 +291,7 @@
         <ul class="nav nav-tabs mb-3" id="barcodeTab" role="tablist">
           <li class="nav-item" role="presentation">
             <button class="nav-link active" id="update-tab" data-bs-toggle="tab" data-bs-target="#update-form"
-              type="button" role="tab">Update</button>
+              type="button" role="tab">Search</button>
           </li>
           <li class="nav-item" role="presentation">
             <button class="nav-link" id="delete-tab" data-bs-toggle="tab" data-bs-target="#delete-form" type="button"
@@ -307,6 +307,10 @@
               <h5 class="card-title">Update Barcode</h5>
               <form action="/dataEnter" method="get">
                 {% csrf_token %}
+                 <div class="mb-3">
+                  <label for="location" class="form-label">Enter Location no:</label>
+                  <input type="text" name="location" id="location" class="form-control" required>
+                </div>
                 <div class="mb-3">
                   <label for="addlUpdate" class="form-label">Enter Item Name:</label>
                   <input type="text" name="ITEMNAME" id="addlUpdate" class="form-control" required>
